cc: Allow SkImage::makeColorSpace to fail

This can fail because of lazy-decode failing (this is tested by some
layout tests, which started crashing with color correct rendering
enabled).

BUG=727169
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2908143005
Cr-Commit-Position: refs/heads/master@{#475970}

Former-commit-id: f7b17ca967e855df93193b868a33e4ccf892c163